WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270230
Fix bounds checks in TypeChecker::visit(AST::IndexAccessExpression)
https://bugs.webkit.org/show_bug.cgi?id=270230
Summary
Fix bounds checks in TypeChecker::visit(AST::IndexAccessExpression)
Alex Christensen
Reported
2024-02-28 08:44:00 PST
rdar://123745652
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-02-28 08:45:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25231
EWS
Comment 2
2024-02-29 20:44:36 PST
Committed
275534@main
(4098a18a57d8): <
https://commits.webkit.org/275534@main
> Reviewed commits have been landed. Closing PR #25231 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug