TypeChecker::visit should set zeroValue for arrays without arguments https://bugs.webkit.org/show_bug.cgi?id=270230 rdar://123745652

Reviewed by Tadeu Zagallo.

This matches what we do with ConstantStruct.

* LayoutTests/fast/webgpu/type-checker-array-bounds-expected.txt: Added.
* LayoutTests/fast/webgpu/type-checker-array-bounds.html: Added.
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/275534@main